--- a/pages/question10.html
+++ b/pages/question10.html
@@ -191,7 +191,8 @@
                             <div class="mistakes">
                                 <img src="../images/ups modal pic.png">
                                 </img>
-                            </div> <span class="close">&times;</span>
+                            </div> 
+                            <!-- <span class="close">&times;</span> -->
                             <div class="content__section--button userBtns">
                                 <button id="0" class="next-btn"><span>Next</span></button>
                             </div>
@@ -206,7 +207,7 @@
                             <div class="yay">
                                 <img src="../images/phish happy.gif">
                                 </img>
-                                <span class="close">&times;</span>
+                                <!-- <span class="close">&times;</span> -->
                                 <h1>Yay! Good job.</h1>
                             </div>
                             <div class="content__section--button userBtns">
