--- a/pages/question3.html
+++ b/pages/question3.html
@@ -189,7 +189,8 @@
                         <div class="mistakes">
                             <img src="../images/ups modal pic.png">
                             
-                        </div> <span class="close">&times;</span>
+                        </div> 
+                        <!-- <span class="close">&times;</span> -->
                         <div class="content__section--button userBtns">
                             <button id="0" class="next-btn"><span>Next</span></button>
                         </div>
@@ -203,8 +204,8 @@
                     <div class="modal-content ">
                         <div class="yay">
                             <img src="../images/phish happy.gif">
-                           
-                            <span class="close">&times;</span>
+<!--                            
+                            <span class="close">&times;</span> -->
                             <h1>Yay! Good job.</h1>
                         </div>
                         <div class="content__section--button userBtns">
