--- a/email_templates/email2.html
+++ b/email_templates/email2.html
@@ -19,7 +19,7 @@
 
         <h4 style="padding: 2em 0 0;">
             From: <span class="tooltip" style="color: blue; text-decoration: underline;">PayPal
-                <span class="tooltiptext tooltip-content shine" id="paypal-hover">mailto: itechsoftbd@gmail.com <br>Ctrl + Click to follow link
+                <span class="tooltiptext tooltip-content shine" id="paypal-hover">mailto:itechsoftbd@gmail.com
                 </span>
             </span> <br>
             Sent: Monday, July 5, 2021 12:35 PM<br>
@@ -52,7 +52,7 @@
             </p><br><br>
 
             <div class="tooltip tooltip-button">Confirm My Account
-                <span class="tooltiptext tooltip-content shine">https://www.reemind. duckdns.org/admin/information/<br>
+                <span class="tooltiptext tooltip-content shine">https://www.reemind.duckdns.org/admin/information/<br>
                     <strong>Ctrl + Click to follow link</strong>
                 </span>
             </div><br><br>
@@ -62,7 +62,7 @@
                 be receieve
                 someone may have accessed your account,go to PayPal (<span class="tooltip"
                     style="color: blue; text-decoration: underline;">https://paypal.com)
-                    <span class="tooltiptext tooltip-content shine" style="width: 140px;">https://www.paypal .com/<br> 
+                    <span class="tooltiptext tooltip-content shine" style="width: 140px;">https://www.paypal.com/<br> 
                         <strong>Ctrl + Click <br>to follow link</strong>
                     </span>
 
